--- a/proyect/package.json
+++ b/proyect/package.json
@@ -14,13 +14,17 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^13.0.0",
-    "cordova-browser": "^7.0.0"
+    "cordova-browser": "^7.0.0",
+    "cordova-plugin-camera": "^8.0.0"
   },
   "cordova": {
     "platforms": [
       "browser",
       "android"
-    ]
+    ],
+    "plugins": {
+      "cordova-plugin-camera": {}
+    }
   },
   "dependencies": {
     "io.cordova.hellocordova": "file:"
